--- a/src/components/styles/aboutme.css
+++ b/src/components/styles/aboutme.css
@@ -76,16 +76,28 @@ h1,h2,p {
     margin: 3rem auto;
     border-radius: 5px;
 }
-/* Millega ma tuttav olen */
-.familiars{
+
+
+/* Skills*/
+.skills{
     width: 80%;
     display: flex;
     flex-direction: column;
     text-align: center;
     margin: auto;
 }
-.familiar-item-container{
-    height: 10rem;
+
+.skills p{
+    color: #9b9b9b;
+    transition: 0.3s ease;
+}
+.skills p:hover{
+    scale: 1.3;
+    color: #fff;
+}
+
+.skills-item-container{
+    height: 15rem;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -94,99 +106,38 @@ h1,h2,p {
     gap: 2rem;
     margin-top: 2rem;
 }
-.familiar-item{
+
+
+.skills-item{
     width: 10rem;
     height: 10rem;
-    background-color: #FFA667;
+    background-color: #ffa66700;
     border-radius: 1rem;
     transition: 0.3s ease;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
-.familiar-item:hover{
+
+
+.skills-item:hover{
     scale: 1.25;
     transform: translateY(-1rem);
-}
-
-/* Elulugu */
-.history-hr{
-    height: 6px;
-    background-color: #ffffff;
-    border-radius: 5px;
-}
-.work-experience .history-hr{
-    margin-left: 0;
-    margin-right: auto;
-}
-.education .history-hr{
-    margin-left: auto;
-    margin-right: 0;
-}
-.aboutme-history{
-    width: 75%;
-    display: flex;
-    flex-direction: row;
-    margin: auto;
-    gap: 1rem;
-}
-
-.work-experience{
-    display: flex;
-    flex-direction: column;
-    text-align: start;
-}
-.education{
-    display: flex;
-    flex-direction: column;
-    text-align: end;
-}
-.education h1, .work-experience h1{
-    margin-bottom: 2rem;
-}
-.cv-card{
-    background-color: #686e78;
-    height: 10rem;
-    width: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 1rem;
-    border-radius: 1rem;
-}
-.cv-text{ 
-    height: 100%;
-    width: 70%;
-    text-align: center;
-}
-.cv-text h2{
-    margin: 0.5rem;
-    font-weight: 500;
-    font-size: 28px;
-}
-.cv-text p{
-    margin: 0.5rem;
-    font-size: 20px;
-}
-.cv-pic{
-    display: flex;
-    background-color: #FFA667;
-    height: 100%;
-    width: 30%;
-    justify-content: center;
-    align-items: center;
-    border-radius: 1rem;
+    color: #fff;
 }
 
 /* SERTIFIKAADID */
-
 .certifiactions{
     width:80%;
     display: flex;
     flex-direction: column;
     text-align: center;
     margin: auto;
+    margin-bottom: 5rem;
 }
+
+
 .cert-hr{
     height: 6px;
     background-color: #ffffff;
@@ -195,11 +146,14 @@ h1,h2,p {
     border-radius: 5px;
 }
 
+
 .cert-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 1rem;
 }
+
+
 .cert{
     display: flex;
     flex-direction: column;
@@ -208,16 +162,28 @@ h1,h2,p {
     min-height: 20vh;
     height: 40vh;
 }
+
+
 .cert h2{
     margin-bottom: 1rem;
 }
+
+
 .cert-pic{
     width: 100%;
     height: 80%;
-    background-color: #FFA667;
+    background-color: #ffa66700;
     transition: 0.3s ease;
     border-radius: 1rem;
 }
+
+
+.cert-pic img{
+    width: auto;
+    height: 100%;
+    border-radius: 1rem;
+}
+
 
 .cert-pic:hover{
     scale: 1.05;
