--- a/src/components/styles/aboutme.css
+++ b/src/components/styles/aboutme.css
@@ -1,7 +1,3 @@
-h1,h2,p {
-    color: white;
-}
-
 .tutvustav-tekst{
     height: auto;
 }
@@ -12,14 +8,20 @@ h1,h2,p {
     margin: auto;
     width: 40rem;
     height: 51vh;
-    background-color: #FFA667;
-    justify-content: center;
     max-width: 85%;
     max-height: 20rem;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 1rem;
+}
+
+.aboutme-picture-placeholder img{
+    margin-top: 30rem;
+    width: 485%;
+    position: relative;
+    left: 40%;
+    overflow: hidden;
 }
 .aboutme-intro-content-width{
     display: flex;
@@ -31,11 +33,20 @@ h1,h2,p {
     width: 80%;
     max-height: 51vh;
     flex:  0 auto;
+    z-index: 1;
 }
 .aboutme-intro-content-width h1{
     font-size: 82px;
     font-weight: 800;
+}
+.aboutme-intro-content-width h2{
+    font-size: 42px;
     margin-bottom: 2rem;
+    transition: 0.3s ease;
+}
+.aboutme-intro-content-width h2:hover{
+    scale: 1.7;
+    color: #ffa667;
 }
 .aboutme-intro-content-width p{
     max-width: 50%;
@@ -87,14 +98,15 @@ h1,h2,p {
     margin: auto;
 }
 
+
 .skills p{
     color: #9b9b9b;
     transition: 0.3s ease;
 }
 .skills p:hover{
-    scale: 1.3;
     color: #fff;
 }
+
 
 .skills-item-container{
     height: 15rem;
@@ -124,7 +136,10 @@ h1,h2,p {
 .skills-item:hover{
     scale: 1.25;
     transform: translateY(-1rem);
+}
+.skills-item img:hover + p{
     color: #fff;
+    scale: 1.2;
 }
 
 /* SERTIFIKAADID */
