--- a/src/components/styles/kontakt.css
+++ b/src/components/styles/kontakt.css
@@ -11,7 +11,7 @@
 
 
 .kontakt-form {
-  background: #686E78 ;
+  background: #343d49 ;
   padding: 2.5rem 3rem;
   border-radius: 1rem;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
@@ -27,7 +27,7 @@ h1{
     transition: 0.3s ease;
 }
 h1:hover{
-    color:#ffa667
+    scale: 1.2;
 }
 
 .kontakt-form input,
