--- a/src/components/styles/aboutme.css
+++ b/src/components/styles/aboutme.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .tutvustav-tekst{
     height: auto;
 }
@@ -19,9 +22,6 @@
 .aboutme-picture-placeholder img{
     margin-top: 30rem;
     width: 485%;
-    position: relative;
-    left: 40%;
-    overflow: hidden;
 }
 .aboutme-intro-content-width{
     display: flex;
