--- a/src/components/styles/contact.css
+++ b/src/components/styles/contact.css
@@ -22,12 +22,13 @@
   gap: 1.2rem;
 }
 h1{
-    font-size: 82px;
+    font-size: 4rem;
     font-weight: 800;
     transition: 0.3s ease;
 }
 h1:hover{
-    scale: 1.2;
+    scale: 1.1;
+    color: #ffa66f
 }
 
 .kontakt-form input,
@@ -35,7 +36,7 @@ h1:hover{
   padding: 0.8rem 1rem;
   border-radius: 8px;
   border: 1.5px solid #ccc;
-  font-size: 16px;
+  font-size: 1rem;
   font-family: inherit;
   resize: none;
   transition: border-color 0.3s ease;
@@ -89,4 +90,25 @@ h1:hover{
   color: #d9534f;
   background-color: #f8d7da;
   border: 1px solid #d9534f;
+}
+
+.directContact {
+  display: flex;
+}
+.contact_footer {
+    background: rgba(66, 66, 66, 0.301);
+    backdrop-filter: blur(5px);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    color: #FFF;
+    padding: 1rem 0;
+    text-align: center;
+    height: 50px;
+    font-size: 1rem;
+    user-select: none;
+    flex-shrink: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
 }
