--- a/src/components/styles/aboutme.css
+++ b/src/components/styles/aboutme.css
@@ -1,12 +1,18 @@
 body{
     overflow-x: hidden;
 }
+
+
+.aboutme-row{
+    display: flex;
+}
+
+
 .tutvustav-tekst{
     height: auto;
 }
-.tutvustav-tekst p{
-    max-width: 50%;
-}
+
+
 .aboutme-picture-placeholder{
     margin: auto;
     width: 40rem;
@@ -19,59 +25,90 @@ body{
     border-radius: 1rem;
 }
 
+
 .aboutme-picture-placeholder img{
     margin-top: 30rem;
     width: 485%;
 }
-.aboutme-intro-content-width{
+
+
+.text-content-width{
     display: flex;
     flex-direction: column;
     text-align: center;
-    justify-content: center;
     align-items: center;
-    height: 20rem;
+    height: auto;
     width: 80%;
-    max-height: 51vh;
-    flex:  0 auto;
     z-index: 1;
 }
-.aboutme-intro-content-width h1{
-    font-size: 82px;
-    font-weight: 800;
+
+
+.text-container{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    flex-direction: row;
+    color: #fff;
 }
-.aboutme-intro-content-width h2{
-    font-size: 32px;
-    margin-bottom: 2rem;
+
+
+.text-content-width h1{
+    font-size: clamp(4rem, 5rem, 6rem);
+    font-weight: 300;
     transition: 0.3s ease;
 }
-.aboutme-intro-content-width h2:hover{
-    scale: 1.7;
-    color: #ffa667;
+.text-content-width h1:hover{
+    scale: 1.1;
+    color: #FFA667;
 }
-.aboutme-intro-content-width p{
+
+.text-content-width h2{
+    font-size: clamp(2rem, 3rem, 4rem);
+    margin-bottom: 2rem;
+    font-weight: 300;
+    transition: 0.3s ease;
+}
+
+
+.text-content-width p{
     max-width: 50%;
-    font-size: 20px;
+    font-size: clamp(0.5rem, 3vw, 1.2rem);
 }
+
 
 .aboutme-main-content{
     display: flex;
     align-items: center;
     justify-content: center;
     height: auto;
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
     text-align: center;
-    font-size: 20px;
+    font-size: clamp(0.2rem, 1.5vw, 1rem);
     color: white;
+    gap: 2rem;
 }
-.left-intro-container{
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    flex-direction: row;
-    height: 50vh;
-    width: 50vh;
+
+
+.text-section{
+    text-align: start;
+    background: rgba(66, 66, 66, 0.50);
+    backdrop-filter: blur(5px);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 1rem;
+    padding: 1rem;
+    min-height: 15rem;
+    max-height: 20rem;
+    width: 30rem;
+    transition: 0.3s ease;
+    align-self: start;
 }
+
+.text-section:hover{
+    scale: 1.1;
+    background-color: rgba(66, 66, 66, 0.7);
+}
+
 
 .aboutme-picture-placeholder-container{
     display: flex;
@@ -80,6 +117,8 @@ body{
     width: 50%;
     height: 50vh;
 }
+
+
 .aboutme-hr{
     height: 6px;
     background-color: #ffffff;
@@ -99,10 +138,18 @@ body{
 }
 
 
+.skills h2{
+    font-size: clamp(2rem, 0, 4rem);
+    font-weight: 300;
+}
+
+
 .skills p{
     color: #9b9b9b;
     transition: 0.3s ease;
 }
+
+
 .skills p:hover{
     color: #fff;
 }
@@ -116,7 +163,6 @@ body{
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    margin-top: 2rem;
 }
 
 
@@ -137,34 +183,39 @@ body{
     scale: 1.25;
     transform: translateY(-1rem);
 }
+
+
 .skills-item img:hover + p{
     color: #fff;
     scale: 1.2;
 }
 
+
 /* SERTIFIKAADID */
 .certifiactions{
-    width:80%;
+    width: 80%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
     margin: auto;
-    margin-bottom: 5rem;
 }
 
+.certifiactions h2{
+    font-weight: 300;
+    font-size: clamp(2rem, 3rem, 4rem);
+}
 
-.cert-hr{
-    height: 6px;
-    background-color: #ffffff;
-    width: 100%;
-    margin: 1rem auto;
-    border-radius: 5px;
+.certifiactions .main-p{
+    color: #fff;
+    font-weight: 300;
+    font-size: clamp(1rem, 1.5rem, 1.5rem);;
 }
 
 
 .cert-container{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 1rem;
 }
 
@@ -172,24 +223,20 @@ body{
 .cert{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding: 1rem;
-    width: 100%;
-    min-height: 20vh;
-    height: 40vh;
+    height: 100%;
 }
 
 
-.cert h2{
-    margin-bottom: 1rem;
+.cert p{
+    color: #fff;
 }
-
 
 .cert-pic{
     width: 100%;
-    height: 80%;
-    background-color: #ffa66700;
+    height: 12vw;
     transition: 0.3s ease;
-    border-radius: 1rem;
 }
 
 
@@ -201,11 +248,11 @@ body{
 
 
 .cert-pic:hover{
-    scale: 1.05;
-    transform: translateY(-0.2rem);
+    scale: 1.1;
 }
 
-.footer {
+
+.aboutme_footer {
     background: rgba(66, 66, 66, 0.301);
     backdrop-filter: blur(5px);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
