--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -2,12 +2,14 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 7rem;
+  height: 6rem;
   background: rgba(66, 66, 66, 0.301);
   backdrop-filter: blur(5px);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 999;
   transition: 0.3s ease;
+  display: flex;
+  justify-content: center;
 }
 
 
@@ -18,8 +20,8 @@
 .nav-buttons {
   display: flex;
   justify-content: center;
-  gap: 2rem;
-  padding: 1rem 0;
+  align-items: center;
+  gap: clamp(0.2rem, 2vw, 2rem);
 }
 
 
@@ -31,22 +33,16 @@
   cursor: pointer;
 }
 
-
-.nav-buttons button:hover {
-  color: #007BFF;
-}
-
-
 .logo{
-  height: 5rem;
+  height: 4rem;
   width: 6rem;
   transition: 0.5s ease;
 }
 
 
 .logo:hover{
-    scale: 1.2;
-    transform: translateY(0.3rem);
+  scale: 1.2;
+  transform: translateY(0.3rem);
 }
 
 
@@ -64,6 +60,7 @@
   font-family: Mulish, Arial, Helvetica, sans-serif;
   color: #FFF;
   font-size: clamp(0.5rem, 3vw, 1.5rem);
+  font-weight: 300ss;
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -74,7 +71,6 @@
 .header_a:hover{
   color: #fa812b;
   scale: 1.2;
-  transform: translateY(0.3rem);
 }
 
 
