--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -1,83 +1,67 @@
-.avaleht-container{
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    height: 90vh;
-}
-
-
 .avaleht-content{
-    flex: 1;
     display: flex;
-    flex-direction: row;
-    overflow: hidden;
-}
-
-
-.main-content{
-    width: 50%;
-    display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
+    margin: 10rem 0 0 auto;
     align-items: center;
-    text-align: center;
-    padding: 0 2rem;
-    overflow: hidden;
 }
 
 
-.main-content-width{
-    width: 100%;
-}
-
-
-.main-content-width h1{
+.home-h1{
     font-size: clamp(2rem, 8vw, 5rem);
-    font-weight: 800;
-    margin-bottom: 1rem;
-}
-.main-content-width h1:hover{
-    color:#FFA667;
-}
-
-
-.main-content-width p{
-    margin-bottom: 3rem;
-    font-size: clamp(0.5rem, 1vw, 1.5rem);
-}
-
-.picture-content {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
-  overflow: hidden;
-}
-
-
-.picture-placeholder{
-    width: 80%;
-    max-width: 600px;
-    height: auto;
-    aspect-ratio: auto;
-    background-color: #ffa66700;
-    border-radius: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.picture-placeholder img{
-    width: 100%;
-    height: auto;
-    border-radius: 1rem;
+    font-weight: 300;
     transition: 0.3s ease;
 }
-
-.picture-placeholder img:hover{
-    transform: scale(1.1) translateY(-1rem);
+.home-h1:hover{
+    scale: 1.2;
+    color: #FFA667;
 }
 
+
+.home-p{
+    font-size: clamp(0.8rem, 2vw, 1.8rem);
+    font-weight: 200;
+}
+
+.welcome-p{
+    font-weight: 300;
+    font-size: clamp(0.8rem, 2vw, 1.7rem);
+    margin-bottom: 3rem;
+}
+
+.forwarding{
+    display: flex;
+    justify-self: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+    text-align: center;
+    width: clamp(10rem, 30vw, 30rem);
+    margin-top: clamp(2rem, 0vw, 3rem);
+}
+
+
+.button-link{
+    color: #FFF;
+    font-size: clamp(0.5rem, 2vw, 1.5rem);
+    font-weight: 300s;
+    text-decoration: none;
+    transition: 0.3s ease;
+    background-color: #FFA667;
+    border-radius: 1rem;
+    padding: 0.2rem 3rem;
+    width: 70%;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.button-link:hover{
+    scale: 1.1;
+    background-color: #fa812b;
+}
 
 .home_footer {
     background: rgba(66, 66, 66, 0.301);
