--- a/src/components/styles/otherSkills.css
+++ b/src/components/styles/otherSkills.css
@@ -7,9 +7,8 @@
 }
 
 .other-skills-toggle p {
-  font-size: 1rem;
+  font-size: clamp(1rem, 1.1rem, 1.2rem);
   color: #9b9b9b;
-  border-radius: 6px;
   transition: all 0.3s ease;
 }
 
@@ -30,6 +29,11 @@
 }
 
 
+.other-skills-item p{
+  font-size: clamp(1rem, 1.1rem, 1.2rem);
+}
+
+
 .other-skills-item {
   position: relative;
   width: 5rem;
@@ -42,18 +46,14 @@
   justify-content: center;
 }
 
+
 .other-skills-item:hover{
   scale: 1.1;
   transform: translateY(-0.5rem);
 }
+
+
 .other-skills-item img:hover + p{
   color: #fff;
   scale: 1.2
-}
-
-
-.other-skills-item img {
-  width: 3rem;
-  height: auto;
-  object-fit: contain;
 }
