--- a/src/components/styles/projects.css
+++ b/src/components/styles/projects.css
@@ -1,38 +1,36 @@
 .projektid-container{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    min-height:  100vh;
-}
-
-
-.projektid-content-width{
-    display: flex;
-    justify-content: center;
+    height:  90vh;
     align-items: center;
-    margin-top: 4rem;
 }
 
 
-.projektid-content-width h1{
-    font-size: 4rem;
-    font-weight: 800;
-    transition: 0.3s ease;
+.projects-h1{
+  font-size: clamp(3rem, 3vw, 4.5rem);
+  font-weight: 300;
+  transition: 0.3s ease;
+  margin-top: clamp(2rem, 1vw, 3rem);
+}
+
+
+.projects-h1:hover{
+  scale: 1.2;
+  color: #ffa66f
 }
 
 
 .projektid-grid-container{
     display: flex;
-    padding: 0 5rem;
     height: auto;
-    justify-content: center;
-    gap: 3rem;
-    margin-top: 5rem;
+    gap: clamp(0.1rem, 3rem, 4rem);
+    margin-top: clamp(1rem, 2vw, 5rem);
 }
 
+
 .projektid-grid-container p{
-    font-weight: 800;
-    font-size: 1rem;
+    font-weight: 300;
+    font-size: clamp(0.5rem, 1vw, 1rem);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,10 +38,7 @@
 
 
 .projektid-grid-item {
-    background-color: #ffa66700;
-    border-radius: 1rem;
-    width: 30rem;
-    height: 20rem;
+    width: clamp(10rem, 25vw, 30rem);
     transition: 0.3s ease;
 }
 
@@ -159,7 +154,7 @@ h2{
   margin-bottom: 0.5rem;
 }
 
-.footer {
+.projects_footer {
     background: rgba(66, 66, 66, 0.301);
     backdrop-filter: blur(5px);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
