--- a/src/components/styles/resume.css
+++ b/src/components/styles/resume.css
@@ -28,10 +28,10 @@
 
 
 .model-content {
-  background: rgba(255, 255, 255, 0.4);
+  background: #797979;
   backdrop-filter: blur(5px);
   border-radius: 8px;
-  height: 95vh;
+  min-height: 95vh;
   width: 50%;
   display: flex;
   flex-direction: column;
