--- a/src/components/styles/aboutme.css
+++ b/src/components/styles/aboutme.css
@@ -84,7 +84,7 @@ body{
     width: 80%;
     margin: 0 auto;
     text-align: center;
-    font-size: clamp(0.2rem, 1.5vw, 1rem);
+    font-size: clamp(0.2rem, 1.8vw, 1.3rem);
     color: white;
     gap: 2rem;
 }
@@ -97,7 +97,8 @@ body{
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 1rem;
     padding: 1rem;
-    height: 17rem;
+    height: auto;
+    min-height: 15rem;
     width: 33%;
     transition: 0.3s ease;
     align-self: start;
