--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -59,8 +59,8 @@
 .header_a{
   font-family: Mulish, Arial, Helvetica, sans-serif;
   color: #FFF;
-  font-size: clamp(0.5rem, 3vw, 1.5rem);
-  font-weight: 300ss;
+  font-size: clamp(0.5rem, 2.3vw, 1.5rem);
+  font-weight: 300;
   display: flex;
   align-items: center;
   text-decoration: none;
