--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -80,3 +80,76 @@
     width: 100%;
     z-index: 999;
 }
+
+
+@media (max-width: 768px) {
+    .avaleht-content{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+
+    .home-h1{
+        font-size: clamp(2.2rem, 5.2vw, 4.7rem);
+        font-weight: 300;
+    }
+
+
+    .home-p{
+        font-size: clamp(1rem, 2.2vw, 2rem);
+        font-weight: 200;
+        width: 70%;
+        text-align: center;
+    }
+
+    .welcome-p{
+        font-weight: 300;
+        font-size: clamp(1rem, 2.2vw, 2rem);
+        margin-bottom: 3rem;
+    }
+
+    .forwarding{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 1rem;
+        width: 50vw;
+    }
+
+
+    .button-link{
+        color: #FFF;
+        font-size: clamp(1rem, 3vw, 2rem);
+        font-weight: 300;
+        text-decoration: none;
+        transition: 0.3s ease;
+        background-color: #FFA667;
+
+        width: 100%;
+        align-self: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 1rem;
+    }
+
+
+    .home_footer {
+        background: rgba(66, 66, 66, 0.3);
+        backdrop-filter: blur(5px);
+        color: #FFF;
+        padding: 1rem 0;
+        text-align: center;
+        height: 50px;
+        font-size: clamp(0.5rem, 3vw, 2rem);
+        user-select: none;
+        flex-shrink: 0;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        z-index: 999;
+    }
+}
