--- a/src/components/styles/resume.css
+++ b/src/components/styles/resume.css
@@ -78,3 +78,61 @@
   background-color: red;
   scale: 1.1;
 }
+
+
+@media (max-width: 600px) {
+   .resume-button {
+    padding: 0.2rem 3rem;
+    width: 80%;
+    background-color: #ffa66700;
+    color: white;
+    font-weight: 300;
+    font-size: clamp(1rem, 3vw, 2rem);
+    margin-top: 1rem;
+    cursor: pointer;
+    transition: 0.3s ease;
+    align-self: center;
+    border-bottom: 3px solid white;
+  }
+
+
+  .model-overlay {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+
+
+  .model-content {
+    border-radius: 8px;
+    min-height: 80vh;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+  }
+
+
+  .resume-iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+
+
+  .buttons{
+    display: flex;
+    flex-direction: column;
+  }
+
+
+  .close-button {
+    padding: 0.2rem 1rem;
+    background-color: #dc3545;
+    color: white;
+    border: none;
+  }
+}
